k8s/deployments/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-race-predictor
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f1-race-predictor
  template:
    metadata:
      labels:
        app: f1-race-predictor
    spec:
      containers:
        - name: front
          image: f1predictoracr.azurecr.io/frontend/predictorfrontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: acr-secret
      # restartPolicy: Always
