k8s/deployments/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: f1-race-predictor
  namespace: frontend
spec:
  selector:
    app: f1-race-predictor
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
